# soveren-agent-platform

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: bootstrap-runtime-packages.yml  ci.yml  publish.yml
deploy/sandbox/: CredentialBroker.Dockerfile  Dockerfile  Egress.Dockerfile  README.md  compose.yaml  credential_broker.py  squid.conf
docs/: API.md  ARCHITECTURE.md  CONSUMING_APP.md  EXTRACTION_PLAN.md  PORTS.md
scripts/: smoke_sandbox.sh  validate_release.py  validate_sdist.py
src/agent_platform/actions/: __init__.py  contracts.py  registry.py  sqlite.py  store.py  worker.py
src/agent_platform/agent/: __init__.py  worker.py
src/agent_platform/app_api/: __init__.py  runtime.py
src/agent_platform/approvals/: __init__.py
src/agent_platform/batching/: __init__.py  contracts.py  rules.py  sqlite.py  store.py  worker.py
src/agent_platform/context/: __init__.py  builder.py  contracts.py  formatting.py
src/agent_platform/cron/: __init__.py  contracts.py  queue_handler.py  sqlite.py  store.py  worker.py
src/agent_platform/decisions/: __init__.py  dispatcher.py  effects.py  registry.py  sqlite.py
src/agent_platform/interfaces/: __init__.py  channels.py
src/agent_platform/llm/: __init__.py
src/agent_platform/outbound/: __init__.py  contracts.py  registry.py  sqlite.py  store.py  worker.py
src/agent_platform/queue/: __init__.py  sqlite.py
src/agent_platform/runs/: __init__.py  contracts.py  sqlite.py  store.py
src/agent_platform/runtime/: __init__.py  planner.py  worker_loop.py
src/agent_platform/sessions/: __init__.py  contracts.py  indexer_worker.py  inspector_registry.py  mailbox_worker.py  registry.py  routing.py  snapshots.py  sqlite.py  store.py  tools.py
src/agent_platform/storage/: __init__.py  bootstrap.py  sqlite.py
src/agent_platform/telegram/: __init__.py  contracts.py  ingress.py  ptb.py
src/soveren_agent_platform/: __init__.py  conversation.py  idempotency.py  json_types.py  model_boundary.py
src/soveren_agent_platform/actions/: __init__.py  contracts.py  registry.py  sqlite.py  store.py  worker.py
src/soveren_agent_platform/agent/: __init__.py  contracts.py  worker.py
tests/: test_actions_runtime.py  test_agent_worker.py  test_async_public_api.py  test_batching.py  test_codex_app_server_backend.py  test_context_builder.py  test_context_formatting.py  test_conversation_history.py  test_credential_broker.py  test_cron.py  test_decision_dispatch_store.py  test_decision_dispatcher.py  test_decisions_registry.py  test_docker_credential_broker.py  test_imports.py  test_llm_contracts.py  test_memory.py  test_outbound_runtime.py  test_planner_dispatch_e2e.py  test_planner_runtime.py  test_reconciliation.py  test_release_metadata.py  test_runs.py  test_runtime_supervisor.py  test_sandbox_manager.py  test_sandbox_runtime.py  test_security_invariants.py  test_session_backend_registry.py  test_session_backends.py  test_session_indexer.py  test_session_lifecycle.py  test_session_mailbox.py  test_session_routing.py  test_session_runtime.py  test_session_tools.py  test_sqlite_concurrency.py  test_storage_and_queue.py  test_telegram_ingress.py  test_telegram_ptb_adapter.py  test_worker_loop.py
(+147 files in other folders)
