[project]
name = "agent-platform"
version = "0.1.0"
description = "Reusable runtime core for durable agent applications."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "python-dateutil>=2.8",
]

[dependency-groups]
dev = [
    "mypy>=1.17",
    "pytest>=8",
    "ruff>=0.12",
    "types-python-dateutil>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
