[project]
name = "soveren-agent-platform"
version = "0.2.2"
description = "Reusable runtime core for durable agent applications."
readme = "README.md"
license = "MIT"
authors = [{ name = "Soveren" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/neureca/soveren-agent-platform"
Repository = "https://github.com/neureca/soveren-agent-platform"
Issues = "https://github.com/neureca/soveren-agent-platform/issues"

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21"]

[dependency-groups]
dev = [
    "mypy>=1.17",
    "pytest>=8",
    "ruff>=0.12",
    "types-python-dateutil>=2.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
